# deepseek-r1s

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix
.github/workflows/: standard.yml
public/pages/: index.html
public/scripts/: index.js
public/styles/: styles.css
src/: main.rs
